style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "poppins", sans-serif;
}
body{
    background-color: #c9d6ff;
    background:linear-gradient(to right, #e2e2e2, #c9d6ff);
}
.container{
    background: #fff;
    width: 450px;
    padding: 1.5rem;
    margin: 50px auto;
    border-radius: 10px;
    box-shadow: 0 20px 35px rgba(0,0,1,0.9);
}
form{
    margin:0 2rem;
}
.form .title{
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
    padding:1.3 rem;
    margin-bottom: 0.4 rem;
}
input{
    color: inherit;
    width: 100%;
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #757575;
    padding-left: 1.5rem ;
    font-size: 15px;
}
.input-group{
    padding: 1% 0;
    position: relative;
}
.input-group i{
    position: absolute;
    color: black;
}
input:focus{
    background-color: transparent;
    outline: transparent;
    border-bottom: 2px solid hsl(327,90%, 28%);
}
input::placeholder{
    color:transparent;
}
label{
   color: #757575;
   position: relative;
   left: 1.2 em;
   top: -1.3em;
   cursor:auto;
   transition: 0.3s;
}
input:focus ~ label,input:not(:placeholder-shown) ~ label{
    top: -3em;
    font-size: 15px;
    color: hsl(327,90%, 28%);
}
.recover{
    text-align: right;
    font-size: 1 rem;
    margin-bottom: 1 rem;
}
.recover a{
    color: rgb(125, 125, 235);
    text-decoration: none;
}
.recover a:hover{
    color:blue;
    text-decoration: underline;
}
.btn{
    font-size: 1.1 rem;
    padding: 8px 0;
    border-radius: 5px;
    outline: none;
    border: none;
    width: 100%;
    background: rgb(125, 125, 235);
    color: white;
    cursor: pointer;
    transition: 0.9s;
}
.btn:hover{
    background: #07001f;
}
.or{
    font-size:1.1 rem;
    margin: 0.5 rem ;
    text-align: center; 
}
.icons{
    text-align: center;
}
.icons i{
    color: rgb(125, 125, 235);
    padding: 0.8 rem, 1.5 rem;
    border-radius: 10px; 
    font-size: 1.5 rem;
    cursor: pointer;
    border:2px solid #dfe9f5;
    margin:0 15px;
    transition:1s;
}
.icons i:hover{
    background: #07001f;
    font-size: 1.6 rem;
    border:2px solid rgb(125, 125, 235);
}
.links{
    display: flex;
    justify-content: space-around;
    padding: 0 4 rem;
    margin-top: 0.9 rem;
    font-weight: bold;
}
button{
    color: rgb(125, 125, 235);
    background: transparent;
    border: none;   
    font-size: 1 rem;
    font-weight: bold;
}
button:hover{
    color: blue;
    text-decoration: underline;
}

